Added kafka, fixed bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=distributed-id-counter
+
+spring.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.redis.port=${SPRING_DATA_REDIS_PORT:6379}
+
+# Log level configuration
+logging.level.root=INFO
+
+# Console logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# File logging
+logging.file.name=application.log
+logging.file.path=logs
+
+# Log file size and backup
+logging.file.max-size=10MB
+logging.file.total-size-cap=100MB
+logging.file.max-history=5
+
+#application related
+count.submitter.type=${APP_COUNT_SUBMITTER_TYPE:GET}
+count.processor.type=${APP_COUNT_PROCESSOR_TYPE:log}
+
+#kafka consumer configuration
+spring.kafka.bootstrap-servers=${KAFKA_HOST_SPRING:localhost}:${KAFKA_PORT_SPRING:9093}
+spring.kafka.consumer.group-id=unique-id-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-offset-reset=earliest
+
+# Kafka Producer Configuration
+spring.kafka.producer.bootstrap-servers=${KAFKA_HOST_SPRING:localhost}:${KAFKA_PORT_SPRING:9093}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
